# MAI_thesis

./: README.md  button_box.py  main.py  psychopy-env.yml  rough.py  tobii_config.yml
pyequipmentlib_d/: .gitignore  .test_frametimes.csv  MANIFEST.in  README.md  build_requirements.txt  pyproject.toml  requirements.txt
pyequipmentlib_d/src/equipment/: eyetracker.py  marker.py
pyequipmentlib_d/src/equipment/io_config/: dummy_config.yml  eyelink_config.yml  tobii_config.yml
pyequipmentlib_d/src/equipment/scripts/: test_eyetracker.hdf5  test_eyetracker.py  test_frametimes.py  test_markers.py
pyequipmentlib_d/tests/: test_markers.py
